# BoumWave

./: .gitignore  README.md  pyproject.toml
src/boumwave/: cli.py  config.py  models.py  validation.py
src/boumwave/commands/: __init__.py  create.py  generate.py  generate_now.py  init.py  new_post.py  scaffold.py
src/boumwave/generation/: __init__.py  index_manager.py  metadata.py  parsers.py  template_engine.py
src/boumwave/templates/: default_config.toml  example_index.html  example_link.html  example_post.html  post_template.md
tests/: conftest.py
tests/e2e/: test_cli_commands.py
tests/integration/: test_generation_flow.py
tests/unit/: test_config.py  test_exceptions.py  test_models.py  test_now_commands.py  test_validation.py
tests/unit/generation/: test_index_manager.py  test_metadata.py  test_parsers.py  test_renderers.py  test_template_engine.py
